--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ target/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea
 *.iws
 *.iml
 *.ipr
@@ -30,6 +31,10 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+
+/target
+
+/lib
 
 ### VS Code ###
 .vscode/
